2008-03-28  Wilson Snyder  <wsnyder@wsnyder.org>

	* progmodes/verilog-mode.el (verilog-auto-inout-module):
	Add optional regular expression to AUTOINOUTMODULE.
	(verilog-inject-auto, verilog-auto-arg, verilog-auto-inst)
	(verilog-auto-inst-param, verilog-auto-reg)
	(verilog-auto-reg-input, verilog-auto-wire, verilog-auto-output)
	(verilog-auto-output-every, verilog-auto-input)
	(verilog-auto-inout, verilog-auto-sense, verilog-auto-tieoff)
	(verilog-auto-unused, verilog-auto): Update documentation to use
	more obvious instance module names versus cell names.

2008-03-28  Jan Djärv  <jan.h.d@swipnet.se>

	* progmodes/compile.el (compilation-mode-tool-bar-map): Only enable
	kill if a process is running.

	* progmodes/grep.el (grep-mode-tool-bar-map): The same.

2008-03-28  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el: Add new backend function 'status-extra-headers.
	(vc-default-status-extra-headers): New function.
	(vc-status-headers): Call 'status-extra-headers.  Add colors.

	* vc-git.el (vc-git-status-extra-headers): New function.

2008-03-28  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-menu.el (cal-menu-holidays-menu)
	(cal-menu-list-holidays-year, cal-menu-list-holidays-following-year)
	(cal-menu-list-holidays-previous-year): Simplify now that 2nd arg of
	holiday-list is optional.
	(calendar-mouse-holidays): Remove un-needed local `l'.

	* calendar/cal-move.el (calendar-cursor-to-nearest-date):
	Remove un-needed local `date'.
	(calendar-cursor-to-visible-date): Use let rather than let*.
	Remove un-needed local `first-of-month-weekday'.

	* calendar/calendar.el (abbreviated-calendar-year): Move to diary-lib.

	* calendar/diary-lib.el (print-diary-entries-hook, diary-list-entries):
	Doc fixes.
	(abbreviated-calendar-year): Move here from calendar.el.  Doc fix.
	(diary-header-line-flag, diary-header-line-format): Declare.
	(diary-pull-attrs): Check for multiple matches.
	(diary-list-entries-2): Simplify finding start of date.